fix: 서버 시작 오류 해결 및 Java 기반 설정 전환
- web.xml 삭제 및 WebAppInitializer 클래스로 설정 통합.
- 스프링 부트 종속성(spring-boot-starter-quartz) 제거하여 순수 스프링 환경 구축.
- Tomcat 서버 재구성으로 충돌 문제 해결.